samples/_failures_safe/1761207369_ae6c9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d0bc3ae.c: In function ‘process_event’:
./samples/SAFE/__tmp_9d0bc3ae.c:181:5: error: expected expression at end of input
  181 |     if (sm->current_state < 0 || sm->current_state >=
      |     ^~
./samples/SAFE/__tmp_9d0bc3ae.c:181:5: error: expected declaration or statement at end of input
